actualización del legal

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </tr>
       <tr>
         <td align="center">
-          <img src="https://ci3.googleusercontent.com/proxy/lA44iQx3FyRT8l5jOQEPtOmc2-BtbLrMgYu2VZgL6WGEv6KMRuL1lt9T24oAaXsfDdilHg49JZ8YTkYdidJp203FnZzkRZg6DY57m2WB4nuixvqmeSRqBR1N6Ojn9e_1s28Oikbq9a-Px9Nk9buW19XtvsC9NnX4f8k=s0-d-e1-ft#https://gallery.mailchimp.com/1a4c5fd5c4f8aaec325f6d4a8/images/888a31b9-8219-4b65-b6bb-348529de8843.png" border="0" alt="cupon-news25Abri.png">
+          <img src="50porciento.png">
         </td>
       </tr>
       <tr>
